--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: 'Segoe UI', sans-serif;
-    background: #111; /* fundo escuro para destacar */
+    background: #111; /* fundo escuro */
     color: #fff;
     margin: 0;
     padding: 40px;
