--- a/spline.html
+++ b/spline.html
@@ -8,16 +8,8 @@
     html, body {
       margin: 0;
       height: 100%;
+      overflow: hidden;
       background: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .container {
-      position: relative;
-      width: 100%;
-      max-width: 1000px;
-      aspect-ratio: 16/9;
     }
     iframe {
       position: absolute;
@@ -30,11 +22,9 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <iframe 
-      src="https://my.spline.design/untitled-65c6cac47efe9324160e84c979028160/"
-      allow="autoplay; fullscreen">
-    </iframe>
-  </div>
+  <iframe 
+    src="https://my.spline.design/untitled-65c6cac47efe9324160e84c979028160/"
+    allow="autoplay; fullscreen">
+  </iframe>
 </body>
 </html>
