--- a/spline.html
+++ b/spline.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projeto 3D Spline</title>
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-      overflow: hidden;
-      background: #000;
-    }
-    iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
-</head>
-<body>
-  <iframe 
-    src="https://my.spline.design/untitled-65c6cac47efe9324160e84c979028160/"
-    allow="autoplay; fullscreen">
-  </iframe>
-</body>
-</html>
+<iframe src="https://my.spline.design/SEUPROJETO/" width="100%" height="100%"></iframe>
